--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fullcalendar/interaction": "^6.1.7",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
+    "leaflet": "^1.9.3",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.5",
@@ -37,6 +38,7 @@
     "@angular/cli": "~15.2.2",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/leaflet": "^1.4.5",
     "angular-cli-ghpages": "^1.0.6",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
