--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^9.22.2",
     "jquery": "^3.6.4",
     "leaflet": "^1.9.3",
+    "ngx-toastr": "^13.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.5",
