--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
@@ -28,6 +29,7 @@
     "accessibility": "^4.5.7",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
+    "firebase": "^9.22.2",
     "jquery": "^3.6.4",
     "leaflet": "^1.9.3",
     "popper.js": "^1.16.1",
