--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/fire": "^7.6.1",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
@@ -26,6 +27,7 @@
     "@fullcalendar/core": "^6.1.7",
     "@fullcalendar/daygrid": "^6.1.7",
     "@fullcalendar/interaction": "^6.1.7",
+    "@types/bootstrap": "^5.2.6",
     "accessibility": "^4.5.7",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
@@ -44,6 +46,7 @@
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.4.5",
+    "@types/node": "^20.3.1",
     "angular-cli-ghpages": "^1.0.6",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
